# omnisummary

./: .dockerignore  .env.template  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.agentcore  LICENSE  README.ko.md  README.md  cdk.json  main.py  package-lock.json  package.json  pyproject.toml  research_cli.py  slack_agent.py
.github/workflows/: ci.yml
agent/: __init__.py  agent.py  agent_tools.py  research_agent.py  research_tools.py  tool_state.py  visuals.py
agent_runtime/: app.py
assets/: architecture.drawio  architecture.excalidraw  concept-pipeline.excalidraw  tech-doc.md
cloudflare-proxy/: worker.js  wrangler.toml
collectors/: __init__.py  base.py  reddit.py  rss.py  rsshub.py  web_search.py  youtube.py
config/: config-template.yaml
docs/: design.md  tech-doc.md
docs/diagrams/: architecture.drawio  concept-pipeline.excalidraw
infrastructure/: __init__.py  application_stack.py  foundation_stack.py
lambda_handlers/: __init__.py  build_trigger.py  digest_handler.py  requirements.txt  slack_event_handler.py  threads_refresh_handler.py  visual_handler.py
output/: __init__.py  delivery.py  renderers.py  slack_handler.py  threads_handler.py
pipeline/: __init__.py  aggregator.py  daily_visual.py  digest_generator.py  ranker.py  trend_tracker.py
scripts/: ci_synth.py  deploy.py  deploy_infra.py  gen_diagrams.py  oneoff_4cut.py  render_excalidraw.mjs  sample_digest.py  sample_visual_brief.py  sync_all_to_s3.sh  sync_rsshub_to_s3.py  sync_youtube_to_s3.py
shared/: __init__.py  config.py  constants.py  formatters.py  formatting.py  history_store.py  logger.py  memory.py  models.py  proxy.py  state_store.py  utils.py
shared/media/: __init__.py  og_image.py
shared/prompts/: __init__.py  prompts.py
shared/research/: __init__.py  research_backends.py
tests/: test_agent_cache.py  test_agent_tools.py  test_agentcore_app.py  test_agents.py  test_aggregator.py  test_base_collector.py  test_collectors_health.py  test_config_validation.py  test_daily_visual.py  test_delivery.py  test_digest_generator.py  test_digest_handler.py  test_digest_handler_alert.py  test_formatting.py  test_health_report.py  test_history_store.py  test_infrastructure.py  test_logger.py  test_memory_store.py  test_model_factory.py  test_models.py  test_og_image.py  test_prompts.py  test_proxy.py  test_ranker_parsing.py  test_ranker_rank.py  test_ranker_slots.py  test_reddit_collector.py  test_renderers.py  test_research_agent.py  test_research_backends.py  test_research_cli.py  test_research_tools.py  test_rss_collector.py  test_rsshub_collector.py  test_slack_event_handler.py  test_slack_handler.py  test_state_store.py  test_threads_handler.py  test_threads_refresh_handler.py  (+7 more)
tools/content_parser/: __init__.py  base_parser.py  html_parser.py  pdf_parser.py  youtube_parser.py
tools/output_handler/: __init__.py  slack_handler.py
tools/summarizer/: summarizer.py
